# boun_asc_ros_wrapper

./: CMakeLists.txt  README.md  package.xml
msg/: NodeInfo.msg  NodeList.msg
scripts/: README.md  TopicWrapper.py  main.py  nodeStruct.py
scripts/AffordanceNodes/: README.md  testAffordance.py
scripts/PerceptionNodes/: README.md  testVision.py
scripts/SceneDescriptorNodes/: README.md  testSC.py
